--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lottie-web": "^5.12.2",
     "framer-motion": "^12.23.26",
     "next": "16.0.7",
     "react": "19.2.0",
